edit: synchronized the '!set' command with the last command changes